# shmape-evtol-index

./: .dockerignore  .gitignore  IMPLEMENTED_FEATURES.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  index_service.py  main.py  repository.py  worker.py
app/data/: companies.json
app/domain/: methodology.py
app/services/: discovery.py  discovery_scan.py  market_data.py
app/static/: app.css  app.js
app/templates/: dashboard.html
deploy/: Dockerfile  deploy_to_giro_k8s.sh
deploy/k8s/: configmap.yaml  cronjob-discovery.yaml  cronjob-refresh.yaml  deployment.yaml  ingress.yaml  kustomization.yaml  networkpolicy.yaml  pvc.yaml  service.yaml
docs/: INTEGRATION.md  METHODOLOGY.md  UNIVERSE.md
tests/: test_api_and_ui.py  test_discovery.py  test_index_service.py  test_k8s_security.py  test_market_data.py  test_methodology.py
