[project]
name = "shmape-evtol-index"
version = "0.1.0"
description = "A transparent global public-equity index for the eVTOL sector"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "jinja2>=3.1",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
